2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>

	Rename scripts/ to build/ for consistency

	* build/: Rename directory from scripts/ for consistency with the
	other binding modules that switched to the new build system.
	* configure.ac (AC_CONFIG_AUX_DIR): Change to build/ directory.
	(AC_CONFIG_MACRO_DIR): ditto.
	* Makefile.am (ACLOCAL_AMFLAGS): Include M4 files from build/.
	* {atk,gdk,gtk}/*/Makefile.am: Include mm-common build files from
	$(top_srcdir)/build/.
	* docs/Makefile.am: ditto.

2009-08-13  Daniel Elstner  <daniel.kitta@gmail.com>

	Reference new canonical name of cairomm tag file

	* configure.ac (cairomm-1.0.tag): Change from cairomm_doxygen_tags
	to the new canonical name of the cairomm tag file.

2009-08-13  Daniel Elstner  <daniel.kitta@gmail.com>

	Distribute gtk/gtkmm/wrap_init.h

	* gtk/gtkmm/filelist.am (gtkmm_files_extra_h): List wrap_init.h.

2009-08-13  Daniel Elstner  <daniel.kitta@gmail.com>

	Clean up remaining cruft in scripts/

	* Makefile.am (DIST_SUBDIRS): Remove the explicit assignment, and
	have Automake figure it out for itself.
	* configure.ac (AC_CONFIG_FILES): Remove scripts/Makefile output
	file.  Merge the remaining output files into one list, and clean
	up a bit.
	* scripts/Makefile.am: Delete now unused build file.
	* scripts/README: Delete unhelpful text file.
	* scripts/{cxx,cxx_std,dk-warn,docgen,macros}.m4: Delete outdated
	and no longer used Autoconf macro files.

2009-08-12  Daniel Elstner  <daniel.kitta@gmail.com>

	Convert tests/ to non-recursive build

	* configure.ac (AC_CONFIG_FILES): Remove tests/*/Makefile ouputs.
	* tests/Makefile.am: Overhaul, modernize and make non-recursive.
	Build the test program targets on make check instead of make all.
	* tests/*/Makefile.am: Delete now unused build files.
	* tests/Makefile.am_fragment: ditto.
	* docs/Makefile_web.am_fragment: Delete left-over file.

2009-08-12  Daniel Elstner  <daniel.kitta@gmail.com>

	Remove duplicate image files for pixbuf-demo
