@@ -31,8 +31,6 @@ _CONFIGINCLUDE(gtkmmconfig.h)
 #include <gtkmmconfig.h>
 #include <utility>
 
-GLIBMM_USING_STD(pair)
-
 _DEFS(gtkmm,gtk)
 _PINCLUDE(glibmm/private/object_p.h)
 
