@@ -17,15 +17,12 @@
  * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
+_CONFIGINCLUDE(gtkmmconfig.h)
 _DEFS(gtkmm,gtk)
 
 #include <gtkmm/treemodelcolumn.h>
-#include <gtkmmconfig.h>
 #include <iterator>
 #include <gtk/gtk.h> /* for GtkTreeIter */
-
-GLIBMM_USING_STD(forward_iterator_tag)
-
 
 namespace Gtk
 {
