@@ -25,11 +25,6 @@ _DEFS(gtkmm,gtk)
 
 #include <gtkmm/treemodel.h>
 #include <gtkmm/selectiondata.h>
-#include <gtkmmconfig.h>
-
-GLIBMM_USING_STD(random_access_iterator_tag)
-GLIBMM_USING_STD(reverse_iterator)
-
 
 namespace Gtk
 {
