@@ -1,5 +1,13 @@
 2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>
 
+	Get rid of obsolete GLIBMM_USING_STD()
+
+	* gtk/gtkmm/treemodelcolumn.h: Stop using GLIBMM_USING_STD(), now
+	that it has been removed from glibmm.
+	* gtk/src/{textbuffer,treeiter,treepath}.hg: ditto.
+
+2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>
+
 	Rename scripts/ to build/ for consistency
 
 	* build/: Rename directory from scripts/ for consistency with the
